--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>DoStuff Dev Test</title>
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
 
   <body>
@@ -11,11 +12,13 @@
       <a href="#/tomorrow">Tomorrow's Events</a>
     </div>
 
-    <div id="content">
+    <div id="content" class="row">
     </div>
 
     <script type="text/template" id="event-template">
-      <h3>{{ title }} @ {{ venue.title }}</h3>
+      <div class="col-xs-4">
+        <p>{{ title }} @ {{ venue.title }}</p>
+      </div>
     </script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
