--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
   </head>
 
   <body>
-    <div id="navigation">
-      <a href="#/today">Today's Events</a>
-      <a href="#/tomorrow">Tomorrow's Events</a>
-    </div>
+    <div class="container">
+      <div class="row">
+        <div id="navigation">
+          <a href="#/today">Today's Events</a>
+          <a href="#/tomorrow">Tomorrow's Events</a>
+        </div>
+      </div>
 
-    <div id="content" class="row">
+      <div id="content" class="row">
+      </div>
     </div>
 
     <script type="text/template" id="event-template">
