--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <script type="text/template" id="event-template">
       <div class="col-sm-4">
         <img class="cover-image" src="https://res-2.cloudinary.com/dostuff-media/image/upload//c_fill,g_faces,b_rgb:090909,f_auto,h_300,w_864/{{ imagery.photo }}">
-        <p>{{ title }} @ {{ venue.title }} | {{ start_time }} </p>
+        <p class="bottom-text">{{ title }} @ {{ venue.title }} | {{ start_time }} </p>
       </div>
     </script>
 
