redo nav bar so it is closer to wireframe

--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
       </div>
 
       <div class="row">
-        <div id="navigation" class="col-xs-12 text-right">
-          <a id="today-route" class="btn" href="#/today">Today's Events</a>
-          <a id="tomorrow-route" class="btn" href="#/tomorrow">Tomorrow's Events</a>
+        <div class="navigation-wrapper">
+          <nav class="navbar navbar-default text-right">
+            <ul class="nav navbar-nav">
+              <li id="today-route"><a href="#/today">Today</a></li>
+              <li id="tomorrow-route"><a href="#tomorrow">Tomorrow</a></li>
+            </ul>
+          </nav>
         </div>
       </div>
 
