add some comments and format app.js file for better readability

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>DoStuff Dev Test</title>
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
+    <!-- since this was just supposed to be a short assignment I decided it was best to import a css library so I didn't spend all of my time on the stylesheet -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
 
